test/negative/type_mismatch_binop.mut
# Negative: add i32 and i64 (no implicit casts)
a: i32 = 10
b: i64 = 20
c: i64 = a + b
